@@ -4,15 +4,11 @@ import com.fasterxml.jackson.databind.JsonNode;
 import org.apache.commons.codec.binary.Hex;
 import play.Logger;
 import play.libs.Json;
-import sun.misc.BASE64Encoder;
-
+import org.apache.commons.codec.binary.Base64;
 import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.PrintWriter;
+import java.io.*;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
@@ -26,9 +22,23 @@ public class ApiTest {
     public static void main(String[] args) throws Exception {
         ApiTest http = new ApiTest();
         Logger.error("APiTest Send Http GET request");
-        String url = "http://121.43.186.32";
+        String url = "http://121.43.186.32/rest";
         JsonNode result = http.sendPost(url,"");
         Logger.error(result.toString());
+    }
+
+    public static String UpperCaseUrlEncode(String s) throws UnsupportedEncodingException {
+
+        char[] temp =URLEncoder.encode(s, "utf-8").toCharArray();
+        for (int i = 0; i < temp.length - 2; i++)
+        {
+            if (temp[i] == '%')
+            {
+                temp[i + 1] = Character.toLowerCase(temp[i + 1]);
+                temp[i + 2] = Character.toLowerCase(temp[i + 2]);
+            }
+        }
+        return new String(temp);
     }
 
     public  static JsonNode sendPost(String url, String param) {
@@ -55,16 +65,22 @@ public class ApiTest {
             byte[] doFinal = mac.doFinal(dataBytes);
             byte[] hexB = new Hex().encode(doFinal);
             String checksum = new String(hexB);
-            String sign1 = new BASE64Encoder().encode(checksum.getBytes("utf-8"));
+            String sign1 =  Base64.encodeBase64String(checksum.getBytes());
+            Logger.error(sign1);
+
+
+
+
             String sign = URLEncoder.encode(sign1, "utf-8");
 
-            String company = new BASE64Encoder().encode("北京可靠".getBytes("utf-8"));
-            String loginName = new BASE64Encoder().encode("manager".getBytes("utf-8"));
-            String password = new BASE64Encoder().encode("iwilley".getBytes("utf-8"));
+            Logger.error(sign);
+            String company = Base64.encodeBase64String("北京可靠".getBytes("utf-8"));
+            String loginName = Base64.encodeBase64String("manager".getBytes("utf-8"));
+            String password = Base64.encodeBase64String("iwilley".getBytes("utf-8"));
             con.setRequestProperty("Company", company);
             con.setRequestProperty("LoginName", loginName);
             con.setRequestProperty("Password", password);
-            con.setRequestProperty("Method", "B1EC2.ShopItem.Query");
+            con.setRequestProperty("Method", "B1EC2.Shop.Query");
             con.setRequestProperty("Version", "1.0");
             con.setRequestProperty("Sign", sign);
             // 发送POST请求必须设置如下两行
@@ -107,60 +123,4 @@ public class ApiTest {
 }
 
 
-//        String url = "http://121.43.186.32";
-////        URL obj = new URL(url);
-////        HttpURLConnection con = (HttpURLConnection) obj.openConnection();
-////        con.setRequestMethod("GET");
-//
-//        String macKey = "lRINGlxXEAiXC2A9umPSboxW8Y1UArdH";
-//        String macData = "";
-////        System.out.println("MACDATA:"+macData);
-//
-//        Mac mac = Mac.getInstance("HmacSHA1");
-////        get the bytes of the hmac key and data string
-//        byte[] secretByte = macKey.getBytes("UTF-8");
-//        byte[] dataBytes = macData.getBytes("UTF-8");
-//        SecretKey secret = new SecretKeySpec(secretByte, "HMACSHA1");
-//
-//        mac.init(secret);
-//        byte[] doFinal = mac.doFinal(dataBytes);
-//        byte[] hexB = new Hex().encode(doFinal);
-//        String checksum = new String(hexB);
-//        String sign = new BASE64Encoder().encode(checksum.getBytes("utf-8"));
-//
-//
-//
-//        String company = new BASE64Encoder().encode("北京可靠".getBytes("utf-8"));
-//        String loginName = new BASE64Encoder().encode("manager".getBytes("utf-8"));
-//        String password = new BASE64Encoder().encode("iwilley".getBytes("utf-8"));
-//        con.setRequestProperty("Company", company);
-//        con.setRequestProperty("LoginName", loginName);
-//        con.setRequestProperty("Password", password);
-//        con.setRequestProperty("Method", "B1EC2.ShopItem.Query");
-//        con.setRequestProperty("Version", "1.0");
-//
-//        con.setRequestProperty("Sign", sign);
-//
-//
-//        int responseCode = con.getResponseCode();
-//
-//        Logger.error("Sending 'GET' request to URL:" + url);
-//        Logger.error("Response Code:" + responseCode);
-//
-//        BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-//        String inputLine;
-//        StringBuffer response = new StringBuffer();
-//
-//        while((inputLine = in.readLine())!=null) {
-//            response.append(inputLine);
-//        }
-//        in.close();
-//
-//        Logger.error(response.toString());
 
-
-//    }
-
-
-
-//}
